# POO2022-1LIRC

EjercicioPolimorfismoHerencia/: BasePlus_Commission_Employee.cpp  BasePlus_Commission_Employee.h  CMakeLists.txt  Commission_Employee.cpp  Commission_Employee.h  Daily_Employee.cpp  Daily_Employee.h  Employee.cpp  Employee.h  Hourly_Employee.cpp  Hourly_Employee.h  Readme.md  Salaried_Employee.cpp  Salaried_Employee.h  main.cpp
